# ci-safety-gate

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  evaluate_gate.py  pyproject.toml  scan_secrets.py
.github/workflows/: ci.yml  mirror.yml
ci_safety_gate/: __init__.py  action_defaults.py  checks.py  cli.py  runner.py
examples/: workflow.yml
examples/demo/: app.py
tests/: conftest.py  test_action_defaults.py  test_checks.py  test_cli_local.py  test_evaluate_gate.py  test_runner.py  test_scan_secrets.py
